# siamese-prototype

./: .gitignore  README.md  build_docs.sh  pyproject.toml
docs/: Makefile  README.md  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/advanced/: custom_builtins.rst  debugging.rst  index.rst  knowledge_management.rst  performance.rst  production_deployment.rst
docs/api/: index.rst  rule_engine.rst
docs/examples/: family_relationships.rst  index.rst
docs/user_guide/: concepts.rst  index.rst
examples/: full_demo.py  knowledge.yaml
src/siamese/: __init__.py  builtins.py  engine.py  resolver.py
tests/: test_fibonacci.py  test_production.py  test_relationship.py
