[project]
name = "siamese-prototype"
version = "2.0.0"
authors = [
  { name="HsiangNianian", email="i@jyunko.cn" },
]
description = "A production-ready, asynchronous backward-chaining rule engine in Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.6.0",
    "PyYAML>=6.0",
    "aiohttp>=3.8.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/hsiangnianian/siamese-prototype"
Documentation = "https://siamese-prototype.readthedocs.io/"
Repository = "https://github.com/hsiangnianian/siamese-prototype"
Issues = "https://github.com/hsiangnianian/siamese-prototype/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siamese"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "furo>=2023.9.10",
    "myst-parser>=2.0.0",
]

[tool.sphinx]
project = "Siamese Prototype"
copyright = "2024, HsiangNianian"
